--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/bootstrap_barrio": "^4.22",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.7.0",
+        "drupal/devel": "^2.1",
         "drupal/entity_reference_revisions": "^1.6",
         "drupal/link_attributes": "^1.9",
         "drupal/paragraphs": "^1.9",
