Creation footer mobile and desktop

--- a/web/themes/custom/new_structure_takeda/new_structure_takeda.libraries.yml
+++ b/web/themes/custom/new_structure_takeda/new_structure_takeda.libraries.yml
@@ -4,6 +4,7 @@ global-styling:
     js/popper.min.js: {}
     js/bootstrap.min.js: {}
     js/global.js: {}
+    js/footer-block.js: {}
   css:
     component:
       css/style.css: {}
