Creating dropdown menu for landings (mobile and desktop)

--- a/web/themes/custom/new_structure_takeda/new_structure_takeda.libraries.yml
+++ b/web/themes/custom/new_structure_takeda/new_structure_takeda.libraries.yml
@@ -5,6 +5,7 @@ global-styling:
     js/bootstrap.min.js: {}
     js/global.js: {}
     js/footer-block.js: {}
+    js/dropdown-landing.js: {}
   css:
     component:
       css/style.css: {}
